src/components/Hero/Hero.css
.hero-section {
  position: relative;
  background-color: var(--dark-color);
  color: var(--light-color);
  overflow: hidden;
  min-height: 100%;
}
.space-lines {
  position: absolute;
 
  height: 100%;
  width: 100%;
  opacity: 0.8;
  top: 5rem;
}

.hero-container {
  position: absolute;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.hero-title {
  text-align: center;
  line-height: 8rem;
  font-size: 10rem;
}
.opin-text {
  color: var(--primary-color);
}

.hero-subtitle {
  font-family: var(--secondary-font);
  text-align: center;
  color: var(--primary-color);
  font-weight: 500;
  text-transform: uppercase;
  margin-top: 1rem;
  font-size: 1.8rem;
}
.social-links {
  display: flex;
  justify-content: space-between;
  gap: 1rem;

  color: var(--dark-color);
}
.social-links button {
  margin-top: 2.5rem;
  font-family: var(--primary-font);
  color: var(--dark-color);
}
.social-links-bottom {
  position: absolute;
  display: flex;
  gap: 0.5rem;
  bottom: 2rem;
  right: 3rem;
}
.register-btn {
  background-color: var(--primary-color);
}

/* elements positioning */
.elements {
  position: absolute;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
}

.stair-el {
  max-width: 15rem;

  right: 9%;
  top: -5.64%;
}

.pillar-el {
  height: 28rem;
  right: 15.15%;
  bottom: -13.16%;
  z-index: 1;
}
.eye-el {
  right: 4%;
  top: 4%;
}
.laptop-el {
  height: 50%;
  left: 10%;
  bottom: -10%;
}
.cube-el {
  left: 13.4%;

  top: 14.16%;
}

.cubes-el {
  height: 30%;
  left: -4%;
  top: 40%;
}
.down-arrow {
  position: absolute;
  width: 100%;
  height: 100%;
  padding-top: 1rem;
  bottom: 4rem;
  display: flex;
  align-items: flex-end;
  justify-content: center;
  animation: float 800ms infinite alternate-reverse ease-in-out;
}

.twitter-icon,
.instagram-icon, .in-icon{
  cursor: pointer;
  z-index: var(--z-tooltip);
  color: var(--light-color);
}
.twitter-icon:hover,
.instagram-icon:hover, .in-icon:hover{
  color: var(--primary-color);
}


@keyframes float {
  0% {
    bottom: 4rem;
  }
  100% {
    bottom: 3rem;
  }
}

/* Media queries for small screens  */

@media (max-width: 1090px) {
  .hero-section{
    min-height: 80%;
  }
  .elements {
    display: none;
  }
  .space-lines {
    top: 0;
    scale: 120%;
  }
  .hero-title {
    line-height: 3.5rem;
    font-size: 4rem;
  }
  .social-links {
    flex-direction: column;
    gap: 0;
    margin-top: 1rem;
  }
  .social-links button {
    margin-top: 0.8rem;
  }
  .hero-subtitle {
    font-size: 1rem;
    margin-top: 0.6rem;
  }
  .social-links-bottom {
    scale: 80%;
    gap: 1rem;
    right: 1rem;
    z-index: 11;
  }
}

